--- a/hexedit.cfg
+++ b/hexedit.cfg
@@ -3,7 +3,7 @@
 # Configuration for convenience bash scripts
 
 # Specify wxHexEditor path here:
-export HEXEDITOR="../wxHexEditor/wxHexEditor"
+export HEXEDITOR="/Users/darthunix/git/wxHexEditor/wxHexEditor"
 
 # Only blocks in the range $MIN_BLOCK_TAGS - $MAX_BLOCK_TAGS receive tags:
 # (Note that setting MIN_BLOCK_TAGS to anything other than 0 will prevent the
@@ -20,11 +20,11 @@ export FONTSIZE=10
 
 # psql can pick up these environment variables (see
 # https://www.postgresql.org/docs/current/static/libpq-envars.html):
-#export PGDATABASE="regression"
+export PGDATABASE="adb"
 #export PGUSER="postgres"
 #export PGPASSWORD="password"
 #export PGHOST=localhost
-#export PGPORT=5432
+export PGPORT=6000
 
 # Templates for using pg_hexedit options to limit annotation overhead follow
 
